ci: try to force snapshot dependencies

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -234,7 +234,7 @@ jobs:
             - run:
                   name: "Maven Package and deploy to Artifactory ([gravitee-snapshots] repository)"
                   command: |
-                      mvn deploy --no-transfer-progress -DskipTests -Dskip.validation=true -T 2C -pl '!gravitee-apim-console-webui, !gravitee-apim-portal-webui' -s .artifactory.settings.xml -P gio-dev
+                      mvn deploy -U --no-transfer-progress -DskipTests -Dskip.validation=true -T 2C -pl '!gravitee-apim-console-webui, !gravitee-apim-portal-webui' -s .artifactory.settings.xml -P gio-dev
             - notify-on-failure
 
     publish-on-nexus:
@@ -252,7 +252,7 @@ jobs:
             - run:
                   name: "Maven Package and deploy to Nexus Snapshots"
                   command: |
-                      mvn deploy --no-transfer-progress -DskipTests -Dskip.validation=true -T 2C -pl '!gravitee-apim-console-webui, !gravitee-apim-portal-webui' -s .nexus.settings.xml  -DaltDeploymentRepository=${NEXUS_SNAPSHOTS_SERVER_ID}::default::${NEXUS_SNAPSHOTS_URL}
+                      mvn deploy -U --no-transfer-progress -DskipTests -Dskip.validation=true -T 2C -pl '!gravitee-apim-console-webui, !gravitee-apim-portal-webui' -s .nexus.settings.xml  -DaltDeploymentRepository=${NEXUS_SNAPSHOTS_SERVER_ID}::default::${NEXUS_SNAPSHOTS_URL}
             - notify-on-failure
 
     publish-images-azure-registry:
@@ -821,6 +821,7 @@ workflows:
                           only:
                               - master
                               - /^\d+\.\d+\.x$/
+                              - fix-nexus-pb
                   requires:
                       - test
             - publish-on-nexus:
@@ -829,6 +830,7 @@ workflows:
                           only:
                               - master
                               - /^\d+\.\d+\.x$/
+                              - fix-nexus-pb
                   requires:
                       - test
             - compute-apim-tag:
